tests/parse_print/issues/363/1/stderr.expected
Error:
    tests/parse_print/issues/363/1/363_1.essence:2:40:
  |
2 | letting S be domain set of int(-10..0) union int(0..10)
  |                                        ^^^^^^^^^^^^^^^^
Skipped tokens
